2002-02-22  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: remove obsolete
	GNOME_COMMON_INIT and GNOME_PLATFORM_GNOME_2 macros.
	* libnautilus-private/nautilus-file-operations.c
	(handle_transfer_duplicate):
	* libnautilus-private/nautilus-icon-dnd.c
	(nautilus_icon_container_get_drop_action):
	* libnautilus-private/nautilus-volume-monitor.c
	(mount_volume_deactivate):
	add break; statement to empty default: labels to fix warning
	on gcc 3.
	* libnautilus-private/nautilus-icon-container.c (clear_drag_state):
	fix typo.

2002-02-22  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-icon-container.c:
	(remove_context_menu_timeout): New.
	(clear_drag_state): Use remove_context_menu_timeout.
	(motion_notify_event): Use remove_context_menu_timeout.
	This fixes a bug where you might end up with two timeouts.
	Remove the code marked "KLUDGE ALERT" which seemed to mess
	up dragging coordinates.

2002-02-22  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-icon-text-item.c: Remove.
	* libnautilus-private/nautilus-icon-text-item.h: Remove.
	
	* libnautilus-private/nautilus-file-dnd.h:
	* libnautilus-private/nautilus-file-dnd.c:
	(nautilus_drag_file_receive_dropped_keyword): Use const char *.
	
	* libnautilus-private/nautilus-icon-container.c:
	(rubberband_timeout_callback), (start_rubberbanding),
	(update_stretch_at_idle), (button_release_event),
	(motion_notify_event), (handle_icon_button_press):
	* libnautilus-private/nautilus-icon-dnd.c: (icon_get_data_binder),
	(nautilus_icon_container_position_shadow),
	(receive_dropped_keyword), (receive_dropped_uri_list),
	(nautilus_icon_container_find_drop_target),
	(nautilus_icon_container_receive_dropped_icons),
	(nautilus_icon_container_get_drop_action),
	(nautilus_icon_dnd_update_drop_target),
	(nautilus_icon_dnd_begin_drag):
	Use eel_gtk_widget_get_button_event_location and
	eel_gnome_canvas_widget_to_world and the other similar functions