@@ -1,3 +1,11 @@
+2002-02-23  Alexander Larsson  <alla@lysator.liu.se>
+
+	* src/nautilus-window.c (nautilus_window_class_init):
+	Set the default icon list for all windows.
+	(nautilus_window_realize): Remove old
+	GNOME2_CONVERSION_COMPLETE code for setting the window
+	icon.
+
 2002-02-22  Gediminas Paulauskas <menesis@delfi.lt>
 
 	* configure.in: remove obsolete
